# streamnet

./: LICENSE.md  README.md  pyproject.toml
src/streamnet/: __init__.py  node.py  streamnet.py  utils.py
